# android-cpp-triangle-with-java

./: .gitignore  CMakeLists.txt  README.md  TODO  build.sh  keytool.sh
android/templates/: AndroidManifest.xml.in  LoadLibraries.java.in  string.xml.in
cmake/: android.cmake
source/: main.cpp
